add location resource
